# prefect-example

./: .gitignore  CONTAINERS.md  README.md  deploy_flow.py  example_flow.py  pyproject.toml
doe_mcp/: README.md  deploy.py  doe_runner.py  flow_designer.py  generated_tasks.py  mcp_server.py  run_all.py  task_generator.py
queued_llm/: README.md  app.py  database.py  deploy.py  flows.py  models.py  schemas.py  tasks.py
vision_api/: README.md  app.py  database.py  deploy.py  docker-compose.yml  flows.py  models.py  schemas.py  storage.py  tasks.py
